@@ -1,3 +1,9 @@
+2004-12-27 21:39 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormLib/IBObjectAdditions.m: Changed some implementations.
+	* GormObjectEditor.m: Removed methods which it was unecessary
+	to override.
+
 2004-12-27 21:21 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GModelDecoder.m: 
